030-software/fluxcd/apps/squid/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: squid
  labels:
    app: squid
    bundle.cert-manager.io/inject-cm: enabled
