030-software/fluxcd/apps/squid/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squid
  annotations:
    configmap.reloader.stakater.com/reload: "config"
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: squid
  template:
    metadata:
      labels:
        app: squid
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9301"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
        fsGroupChangePolicy: OnRootMismatch
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: "kubernetes.io/hostname"
                labelSelector:
                  matchLabels:
                    app: squid
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: squid
      containers:
        - name: squid
          image: ubuntu/squid:latest@sha256:6a097f68bae708cedbabd6188d68c7e2e7a38cedd05a176e1cc0ba29e3bbe029
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3128
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            tcpSocket:
              port: http
          volumeMounts:
            - name: data
              mountPath: /var/spool/squid
            - name: config
              mountPath: /etc/squid/squid.conf
              subPath: squid.conf
            - name: config
              mountPath: /etc/squid/acl-dstdomain-localnetsites.cfg
              subPath: acl-dstdomain-localnetsites.cfg
            - name: temp
              mountPath: /tmp/run
            - mountPath: /etc/ssl/certs
              name: tls
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 512Mi
        - name: squid-exporter
          image: boynux/squid-exporter:v1.13.0
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: metrics
              containerPort: 9301
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: metrics
          livenessProbe:
            tcpSocket:
              port: metrics
          readinessProbe:
            tcpSocket:
              port: metrics
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 128Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: squid
        - name: config
          configMap:
            name: config
        - name: temp
          emptyDir: {}
        - name: tls
          configMap:
            name: homelab-ca-cm
            defaultMode: 0600
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
  annotations:
    configmap.reloader.stakater.com/reload: "config"
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: "kubernetes.io/hostname"
                labelSelector:
                  matchLabels:
                    app: nginx
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: nginx
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: nginx
          image: busybox:1.38
          args: ["busybox", "httpd", "-f", "-v", "-p", "8080"]
          workingDir: /assets
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              port: http
              path: /proxy.pac
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /assets/proxy.pac
              subPath: proxy.pac
      volumes:
        - name: config
          configMap:
            name: config
            defaultMode: 0644
