030-software/fluxcd/apps/squid/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: squid
spec:
  type: ClusterIP
  ports:
    - port: 3128
      targetPort: http
      protocol: TCP
      name: http
    - port: 9301
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app: squid
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: nginx
