030-software/fluxcd/apps/squid/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: squid
spec:
  hostnames:
  - squid.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: nginx
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
